--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Mar 29 22:47:57 BST 2010
+#Mon Mar 29 23:15:47 BST 2010
 eclipse.preferences.version=1
-encoding/<project>=utf-8
+encoding/<project>=UTF-8
