--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Mon Mar 29 23:15:47 BST 2010
+#Tue Jun 29 13:10:48 BST 2010
 eclipse.preferences.version=1
-encoding/<project>=UTF-8
+encoding/<project>=utf-8
